# CS5023-MajorProject

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
src/tour_guide/: package.xml  setup.cfg  setup.py
src/tour_guide/config/: landmarks.yaml  localization.yaml  nav2.yaml  oldlandmarks.yaml
src/tour_guide/launch/: map_maker.launch.py  tour_guide.launch.py
src/tour_guide/maps/: map.pgm  map.yaml  map1.pgm  oldmap1.pgm  oldmap1.yaml
src/tour_guide/test/: test_tsp.py
src/tour_guide/tour_guide/: landmark.publisher.py  landmark_manager.py  landmark_publisher.py  route_planner.py  tour_cli.py  tour_executor.py  tsp.py
web/: .env.local.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/components/: TourComposer.tsx
web/lib/: landmarks.ts
web/scripts/: fake-rosbridge.mjs
